--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
@@ -90,7 +90,6 @@
    <div class="row">
      <div class="col-md-12 planet-tabs">
        <p style="text-align: center">
-
          <div class="col-md-6" style="padding:0px; margin: 0px; height: 100%">
          <img src="images/mars2.png" width="70%" height="70%" style="margin-top:20px">
          </div>
@@ -99,9 +98,7 @@
            <button type="button" id='btn-mars-enable' style="display:inline; width:45%" class="highlight btn btn-primary btn-lg">Highlight</button>
            <button type="button" data-toggle="modal" data-target="#myModal4" style="display:inline; width:45%" class="btn btn-secondary btn-lg">Read More</button>
          </div>
-
        </p>
-
      </div>
   </div>
   </div>
@@ -117,7 +114,12 @@
           <li class="nav-tabs"><a href="index.html" class="a-nav-tabs">Home</a></li>
 
           <li class="nav-tabs"><a href="index.html" class="a-nav-tabs">ISS Live</a></li>
-          <li class="nav-tabs" id="button" style="border-bottom:none"><button type="button" id="planet-info" class="btn btn-primary btn-lg button-nav">Planet Info</button></li>
+
+          <li class="nav-tabs" style="border-bottom:none"><button type="button" id="planetInfo" class="btn btn-primary btn-lg button-nav">Planet Info</button></li>
+
+          <li class="nav-tabs" style="border-bottom:none"><button type="button" id="galaxyInfo" class="btn btn-primary btn-lg button-nav">Galaxy Info</button></li>
+
+          <li class="nav-tabs" style="border-bottom:none"><button type="button" id="outerSpaceInfo" class="btn btn-primary btn-lg button-nav">Outer Space Info</button></li>
           <nav aria-label="Zoom">
             <ul class="pager" style="border-radius:5px;background-image:linear-gradient(to bottom,#337ab7 0,#265a88 100%);">
               <li class="zoom1"><button type="button" id="zoom-out" class="btn btn-primary zoom-btn"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button></li>
@@ -137,19 +139,25 @@
   </div>
 <div class="container-fluid" style="width:100%; height:1000px; position:absolute; z-index:1">
   <p style="text-align: center">
-      <img src="images/galaxy-5.png" id="outer-spacee" class="outer-space align-center" width="300px"/>
+      <img src="images/galaxy-5.png" id="outer-space11" class="outer-space align-center" width="400px"/>
 
-      <!-- <img src="images/galaxy-3.png" id="outer-space2" class="outer-space align-center" width="200px"/>
-        <br>
-      <img src="images/galaxy-1.png" id="outer-space3" class="outer-space align-center" width="290px"/>
-        <br>
+      <img src="images/galaxy-8.png" id="outer-space11" class="outer-space align-center" width="400px"/>
+
+      <img src="images/galaxy-9.png" id="outer-space11" class="outer-space align-center" width="320px"/>
+
+      <img src="images/galaxy-10.png" id="outer-space11" class="outer-space align-center" width="390px"/>
+
+      <img src="images/galaxy-1.png" id="outer-space3" class="outer-space align-center" width="400px"/>
+
       <img src="images/galaxy-4.gif" id="outer-space4" class="outer-space align-center" width="220px"/>
+
+      <img src="images/galaxy-11.png" id="outer-space11" class="outer-space align-center" width="300px"/>
 
       <img src="images/galaxy-6.png" id="outer-space5" class="outer-space align-center" width="250px"/>
 
       <img src="images/galaxy-7.png" id="outer-space6" class="outer-space align-center" width="200px"/>
 
-      <img src="images/galaxy-8.png" id="outer-space7" class="outer-space align-center" width="400px"/> -->
+      <img src="images/galaxy-8.png" id="outer-space7" class="outer-space align-center" width="380px"/>
   </p>
 </div>
 
@@ -266,7 +274,7 @@
   </div>
 </div>
 
-<div class="container-fluid modal-index">
+<div class="container-fluid modal-index" style="position: relative; z-index: 10000">
   <!-- Modal - mercury-->
   <div style="zoom:2; margin-top:100px;" class="modal fade" id="myModal" tabindex="100" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
