spin feature added to astroid belt (solar system)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
            <div class="col-md-6" style="margin-top:60px">
              <h1 style="color:#ffffff;margin-top:60px; display: inline;">2. Venus </h1><br><br>
              <button type="button" id='btn-venus-enable' style="display:inline; width:45%" class="highlight btn btn-primary btn-lg">Highlight</button>
-             <button type="button" data-toggle="modal" data-target="#myModal2" style="display:inline; width:45%" class="btn btn-secondary btn-lg">Remove</button>
+             <button type="button" data-toggle="modal" data-target="#myModal2" style="display:inline; width:45%" class="btn btn-secondary btn-lg">Read more</button>
            </div>
          </p>
        </div>
@@ -107,7 +107,7 @@
 <div class="col-md-6 push-down" >
   <div class="col-md-12">
     <!-- ASTROID BELT -->
-    <div class="container-fluid" style="position:relative; z-index:500">
+    <div class="container-fluid" style="position:relative; z-index:111500">
       <div class="row">
         <div class="col-md-12 nav" style="margin-bottom:80px;">
           <ul class="nav-ul">
@@ -139,25 +139,23 @@
   </div>
 <div class="container-fluid" style="width:100%; height:1000px; position:absolute; z-index:1">
   <p style="text-align: center">
-      <img src="images/galaxy-5.png" id="outer-space11" class="outer-space align-center" width="400px"/>
+      <img src="images/galaxy-5.png" id="outer-space11" class="outer-space align-center" width="400px" style="margin:20px"/>
 
-      <img src="images/galaxy-8.png" id="outer-space11" class="outer-space align-center" width="400px"/>
+      <img src="images/galaxy-8.png" id="outer-space11" class="outer-space align-center" width="400px" style="margin:20px"/>
 
-      <img src="images/galaxy-9.png" id="outer-space11" class="outer-space align-center" width="320px"/>
+      <img src="images/galaxy-9.png" id="outer-space11" class="outer-space align-center" width="320px" style="margin:20px"/>
 
-      <img src="images/galaxy-10.png" id="outer-space11" class="outer-space align-center" width="390px"/>
+      <img src="images/galaxy-10.png" id="outer-space11" class="spin-2 outer-space align-center" width="390px" style="margin:20px"/>
 
-      <img src="images/galaxy-1.png" id="outer-space3" class="outer-space align-center" width="400px"/>
+      <img src="images/galaxy-1.png" id="outer-space3" class="spin-1 outer-space align-center" width="400px" style="margin:20px"/>
 
-      <img src="images/galaxy-4.gif" id="outer-space4" class="outer-space align-center" width="220px"/>
+      <img src="images/galaxy-12.png" id="outer-space4" class="spin-2 outer-space align-center" width="220px" style="margin:20px"/>
 
-      <img src="images/galaxy-11.png" id="outer-space11" class="outer-space align-center" width="300px"/>
+      <img src="images/galaxy-11.png" id="outer-space11" class="spin-4 outer-space align-center" width="300px" style="margin:20px"/>
 
-      <img src="images/galaxy-6.png" id="outer-space5" class="outer-space align-center" width="250px"/>
+      <img src="images/galaxy-6.png" id="outer-space5" class="spin-5 outer-space align-center" width="250px" style="margin:20px"/>
 
-      <img src="images/galaxy-7.png" id="outer-space6" class="outer-space align-center" width="200px"/>
-
-      <img src="images/galaxy-8.png" id="outer-space7" class="outer-space align-center" width="380px"/>
+      <img src="images/galaxy-7.png" id="outer-space6" class="spin-6 outer-space align-center" width="200px" style="margin:20px"/>
   </p>
 </div>
 
@@ -165,8 +163,10 @@
       <img src="images/galaxy-1.png" width="100%" id='galaxy' class="galaxy">
     </p>
 
-    <div class="col-md-12 astroid-div-main" id="astroid">
+      <div class="col-md-12 astroid-div-main astroid-belt-spin" id="astroid">
       <!--layer3-->
+
+        <img src="images/astroidbelt.png" class="spin-astroidbelt" width="88%">
 
         <p style="text-align: center; margin-top: 165px">
 
@@ -207,11 +207,9 @@
               <img src="images/sun.png" id='sun' class="planet" style="position: relative">
             </p>
         </p>
-    </div>
-
-  </div>
+      </div>
 </div>
-
+</div>
   <div class="col-md-3" id="wiki-nav">
     <div class="planet-wiki" id="wiki-nav-click2">
       <div class="row">
