shuttle animation added to solar system page + nav-bar buttons changed to suit animation

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
   </div>
   </div>
 
+      <img src="images/spacecraft.png" class="shuttle-animation-div" id="shuttle" width="300px"/>
+      <img src="images/tower.png" style="margin-left:350px"class="shuttle-animation-div" id="tower" width="300px"/>
+
 <div class="col-md-6 push-down" >
   <div class="col-md-12">
     <!-- ASTROID BELT -->
@@ -121,16 +124,16 @@
 
           <li class="nav-tabs" style="border-bottom:none"><button type="button" id="outerSpaceInfo" class="btn btn-primary btn-lg button-nav">Outer Space Info</button></li>
           <nav aria-label="Zoom">
-            <ul class="pager" style="border-radius:5px;background-image:linear-gradient(to bottom,#337ab7 0,#265a88 100%);">
-              <li class="zoom1"><button type="button" id="zoom-out" class="btn btn-primary zoom-btn"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span></button></li>
+            <ul class="pager" style="width:100%;border-radius:5px;background-image:linear-gradient(to bottom,#337ab7 0,#265a88 100%);">
+              <li class="zoom1"><button type="button" id="zoom-out" class="btn btn-danger zoom-btn">LAUNCH <span class="glyphicon glyphicon-chevron-right"></span></button></li>
 
-              <li><button type="button" class="stage-buttons btn btn-outline-primary btn-lg" id='solar-system3'>Solar System</button></li>
+              <li style="margin-left:90px;"><button type="button" class="btn btn-outline-primary btn-md" id='solar-system3'>Solar System</button></li>
 
-              <li><button type="button" class="stage-buttons btn btn-outline-primary btn-lg" id='solar-system2'>Galaxy </button></li>
+              <li><button type="button" class=" btn btn-outline-primary btn-md" id='solar-system2'>Galaxy </button></li>
 
-              <li><button type="button" class="stage-buttons btn btn-outline-primary btn-lg" id='solar-system1'>Outer  Space</button></li>
+              <li><button type="button" class="btn btn-outline-primary btn-md" id='solar-system1'>Outer Space</button></li>
 
-              <li class="zoom2 float-right"><button type="button" id="zoom-in" class="btn btn-primary zoom-btn"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button></li>
+              <li class="zoom2 float-right"><button type="button" id="zoom-in" class="btn btn-danger zoom-btn"><span class="glyphicon glyphicon-chevron-left"></span> RETURN </button></li>
             </ul>
           </nav>
         </ul>
